--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,20 @@
 doctype html
 html(lang="ko")
 	head 
-		title Wetube 
+		title #{pageTitle} | Wetube 
+		link(rel="stylesheet" href="https://unpkg.com/mvp.css")
 	body 
-		block content
+		header
+			nav
+				if fakeUser.loggedIn 
+					small hello #{fakeUser.username}
+				ul 
+					li 
+						if fakeUser.loggedIn
+							a(href="/logout") Log out
+						else 
+							a(href="/login") Login 
+			h1=pageTitle
+		main
+			block content
 		include partials/footer.pug
