--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,4 +1,11 @@
 extends base.pug
+include mixins/video
 
 block content 
 	h2 hello you will watch trending videos!
+	ul 
+		each video in videos 
+			+video(video)
+		else 
+			li sorry nothing
+			
